kubernetes/kamar/microblog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microblog
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
        - name: microblog
          image: kamaralii/microblog:kmom05
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          command:
            - sh
            - -c
            - flask db upgrade && flask run --host=0.0.0.0
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /metrics
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  selector:
    app: microblog
  ports:
    - port: 80
      targetPort: 5000
