kubernetes/kamar/microblog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    cert-manager.io/cluster-issuer: letsencrypt-kamar
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - microblog.20-223-27-237.nip.io
      secretName: microblog-tls-nip
  rules:
    - host: microblog.20-223-27-237.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog
                port:
                  number: 80
